# fabianlars.de

./: .gitignore  Cargo.toml  README.md  next.config.mjs  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: backend.yml  deploy.yml  format.yml  frontend-yew.yml  frontend.yml  test.yml
__tests__/: HomeTest.js
_old/: package.json  pnpm-lock.yaml
_old/pages/: _app.tsx  index.tsx
_old/public/: style.scss
backend/: Cargo.toml
backend-rocket/src/: main.rs
backend-warp/: Cargo.toml
backend/sql/: rotations.sql
backend/src/: main.rs
components/: Header.tsx
frontend/: .babelrc  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  webpack.config.js
frontend-experimental/: .gitignore  Cargo.toml  webpack.config.js
frontend-experimental/src/: app.rs  lib.rs
frontend-preact/: .gitignore  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend-preact/src/: index.js
frontend-preact/src/views/Home/: index.js
frontend-preact/src/views/Mods/: index.js
frontend/.yarn/: build-state.yml
frontend/components/: Header.js
frontend/css/: main.css
frontend/pages/: _app.tsx  apps.js  art.js  index.js  mods.js  mods.tsx
frontend/public/: index.html
frontend/src/: app.rs  lib.rs  theme.js
frontend/src/components/: App.js  AppHeader.js
frontend/src/views/Gear/: index.js
frontend/static/: index.html  style.scss
frontend/styles/: Home.module.scss  globals.scss
frontend_old/: apps.html  art.html  index.html  mods.html
public/: humans.txt  index.html
src/components/: Footer.astro  Header.astro
src/layouts/: Layout.astro
src/pages/: index.astro
wapi/: Cargo.toml  README.md
wapi/src/: main.rs
