[package]
authors = ["FabianLars"]
edition = "2018"
name = "backend"
version = "0.1.0"

[profile.release]
panic = 'abort'

[dependencies]
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["macros"]}
warp = "0.2"
