[package]
authors = ["FabianLars"]
edition = "2018"
name = "backend"
version = "0.1.0"

[profile.release]
panic = 'abort'

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
warp = {version = "0.3", default-features = false}
