[package]
authors = ["FabianLars <fabianlars@fabianlars.de"]
edition = "2018"
name = "frontend"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0"
web-sys = {version = "0", features = ["KeyboardEvent"]}
wee_alloc = {version = "0", optional = true}

log = "0"
wasm-logger = "0"

serde = "1"
serde_derive = "1"
yew = "0"
yew-router = "0"

[dev-dependencies]
wasm-bindgen-test = "0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
