[package]
name = "frontend"
version = "0.1.0"
authors = ["FabianLars <fabianlars@fabianlars.de"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.58"
web-sys = { version = "0.3", features = ["KeyboardEvent"]}
wee_alloc = { version = "0.4.4", optional = true }

wasm-logger = "0.2"
log = "0.4"

yew = "0.16"
yew-router = "0.13"
serde = "1"
serde_derive = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"