[package]
name = "frontend"
version = "0.1.0"
authors = ["FabianLars <fabianlars@fabianlars.de"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0"
web-sys = { version = "0", features = ["KeyboardEvent"]}
wee_alloc = { version = "0", optional = true }

wasm-logger = "0"
log = "0"

yew = "0"
yew-router = "0"
serde = "1"
serde_derive = "1"

[dev-dependencies]
wasm-bindgen-test = "0"